# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "alkyne"
version = "0.2.0"
authors = ["Miguel Young <mcyoung@mit.edu>"]
edition = "2018"

[dependencies]
crossbeam = "0.7.2"
chashmap = "2.2.2"
pest = "2.1.2"
pest_derive = "2.1.0"
rustc_version = "0.2.3"
rustyline = "5.0.5"
termion = "1.1.1"
toolshed = "0.8.1"
thread_local = "1.0.1"
